Added python bytecode, logs, and environment to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
-logs/movelogs.log
+# Virtual Environment
+venv/
+.env
+
+# Python bytecode
+__pycache__
+*.py[cod]
+
+# Logs and temp files
+logs/
+*.log
+*.tmp
